Moved add post icon back to the right

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div id="edit" class="main-view" :class="{open: activeView === 'edit'}">
           <div class="card">
             <h3 class="card-title">Edit Newsletter</h3>
-            <span class="card-title-icon" title="Add Custom Post" @click="addPost"  style="right: 50px"><i class="far fa-plus-square tool-icon"></i></span>
+            <span class="card-title-icon" title="Add Custom Post" @click="addPost"  ><i class="far fa-plus-square tool-icon"></i></span>
             <!-- <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:235px">
               These fields support shortcut key formatting.<hr>
               <div class="row">
