--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <div id="edit" class="main-view" :class="{open: activeView === 'edit'}">
           <div class="card">
             <h3 class="card-title">Edit Newsletter</h3>
-            <span class="card-title-icon" title="Add Custom Post" @click="addPost"  ><i class="far fa-plus-square tool-icon"></i></span>
+            <span class="card-title-icon" title="Add Custom Post" @click="addPost"><i class="far fa-plus-square tool-icon"></i></span>
             <!-- <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:235px">
               These fields support shortcut key formatting.<hr>
               <div class="row">
@@ -449,11 +449,10 @@
                         <input :id="'post-color-'+pos" type="color" :value='postColor(pos, "text")' @input='e=>editPost(pos, "text", e.target.value)' :class="{light: isLight(postColor(pos, 'text'))}" title="Customize Post Text Color">
                         <label :for="'post-color-'+pos">Post Text Color</label>
                       </div>
-                    </span></span>
-
-
+                    </span>
                   </span>
-                </li>
+                </span>
+              </li>
             </div>
           </div>
         </div>
