- Added max resize width - Adjusted min width for double view

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           &copy; 2020
       </aside>
       <aside id="preview" :class="{large: activeView == 'preview'}" ref="preview">
-        <resizehandle othercontainer="#main"></resizehandle>
+        <resizehandle othercontainer="#main" mincontainer="805" minother="700"></resizehandle>
         <div class="preview-header">
           <h3>Newsletter Preview</h3>
         </div>
