Updated the help

--- a/index.html
+++ b/index.html
@@ -742,8 +742,8 @@
                 <li>Go to the <strong>Setup</strong> tab</li>
                 <li>Add your blog posts <small>(Hover over the <strong><i class="fas fa-question-circle" style="color: #aeaeae;"></i></strong> for tips)</small></li>
                 <ul style="list-style-type: square">
-                  <li><strong>Load Multiple Posts</strong> will load blogs from your blog page - You can even choose how many to load in using the number beside the field</li>
-                  <li><strong>Load Individual Posts</strong> lets you Load a single post - Use your blog post's URL link in this field</li>
+                  <li><strong>Load Multiple Posts</strong> will load blogs from your Twenty Over Ten blog page <small>(You can even choose how many to load in using the number beside the field)</small></li>
+                  <li><strong>Load Individual Posts</strong> lets you Load a single post from a Twenty Over Ten website <small>(Use your blog post's URL link in this field)</small></li>
                 </ul>
                 <li>Choose your header option</li>
                 <ul style="list-style-type: square">
@@ -755,7 +755,7 @@
                 <li>Choose your footer option</li>
                 <ul style="list-style-type: square">
                   <li><strong>No Footer</strong> will make it so no footer appears</li>
-                  <li><strong>Use Template</strong> allows you to use a premade footer template - This will include the required disclaimers</li>
+                  <li><strong>Use Template</strong> allows you to use a premade footer template <small>(This will include the required disclaimers)</small></li>
                   <li><strong>Custom Footer</strong> allows you to design your own footer</li>
                 </ul>
                 <li>Optional: Customize each post's colours by clicking on the coloured box</li>
@@ -770,6 +770,8 @@
                     <li>If you have loaded posts during setup you'll see a list of them here</li>
                     <li>Clicking the <strong><i class="far fa-plus-square" style="color: #aeaeae;"></i></strong> in the top right will create a new post</li>
                     <li>Clicking the <strong><i class="fas fa-trash-alt" style="color: #aeaeae;"></i></strong> to the right of each post will remove that post</li>
+                    <li>Clicking the <strong><i class="far fa-clone" style="color: #aeaeae;"></i></strong> to the right of each post will clone that post</li>
+                    <li>Clicking the <strong><i class="fas fa-paint-brush" style="color: #aeaeae;"></i></strong> to the right of each post will allow you to edit the colours for that post</li>
                     <li>Edit the contents of each post by clicking on the field and typing</li>
                     <ul style="list-style-type: square">
                       <li><strong>Title</strong> will change the title of the post <small>(Supports HTML)</small></li>
@@ -784,7 +786,6 @@
                       <li><strong><i class="fas fa-chevron-up" style="color: #aeaeae;"></i> <i class="fas fa-chevron-down" style="color: #aeaeae;"></i></strong> will move the post to the top/bottom</li>
                       <li><strong><i class="fas fa-sort-up" style="color: #aeaeae;"></i> <i class="fas fa-sort-down" style="color: #aeaeae;vertical-align: super;"></i></strong> will move the post up/down</li>
                     </ul>
-                    <li>Optional: Change your colours by clicking on the coloured box <small>(Hover over the <strong><i class="fas fa-question-circle" style="color: #aeaeae;"></i></strong> for tips)</small></li>
                   </ol>
                 </div>
               </div>
