- Added notes to analytics that it does it automatically - Added RSS Feed blog link to help of loading posts

--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
         <div id="setup" class="main-view" :class="{open: activeView === 'setup'}">
           <div class="card">
             <h3 class="card-title">Load Posts For the Newsletter</h3>
-            <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:215px">
-              For multiple posts use your blog page's url<br>For individual posts use the blog post's url
+            <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:250px">
+              <p>For multiple posts use your blog page's url<br>For individual posts use the blog post's url</p>
+              <p>If you're using SiteForward's RSS Feed you can load posts from: <a href="http://siteforward.ca/rss-feed" target="_blank">http://siteforward.ca/rss-feed</a></p>
+
             </span></span>
             <p>Load Multiple Posts</p>
             <div class="form-item split">
@@ -471,6 +473,7 @@
           </div>
           <div class="card">
             <h3 class="card-title">Google Analytics</h3>
+            <p><strong><small>The Analytic's code will save automatically once added</small></strong><br></p>
             <span class="card-title-icon"><i class="fas fa-question-circle tool-icon"></i><span class="card-title-help" style="width:200px">
             Google Analytics on Newsletters is still being tested
             </span></span>
