Hid a broken PDF button

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <div class="form-item even">
               <input type="button" value="Copy Code" @click="copyNewsletterCode">
               <input type="button" value="Copy Newsletter" @click="copyNewsletter">
-              <input type="button" value="Download PDF" @click="downloadPDF">
+              <!-- <input type="button" value="Download PDF" @click="downloadPDF"> -->
             </div>
           </div>
         </div>
