--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
             <div class="accordion" :class="{open: header.style == 0}" @click="header.style = 0">
               <div class="accordion-title">
                 <p>No Header</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
             </div>
             <div class="accordion" :class="{open: header.style == 1}" @click="header.style = 1">
               <div class="accordion-title">
                 <p>Use Image</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -271,7 +271,7 @@
             <div class="accordion" :class="{open: header.style == 2}" @click="header.style = 2">
               <div class="accordion-title">
                 <p>Use Titles</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -287,7 +287,7 @@
             <div class="accordion" :class="{open: header.style == 3}"  @click="header.style = 3">
               <div class="accordion-title">
                 <p>Custom Header</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
@@ -303,13 +303,13 @@
             <div class="accordion" :class="{open: footer.style == 0}" @click="footer.style = 0">
               <div class="accordion-title">
                 <p>No Footer</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
             </div>
             <div class="accordion" :class="{open: footer.style == 1}" @click="footer.style = 1">
               <div class="accordion-title">
                 <p>Use Template</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item split even">
@@ -388,7 +388,7 @@
             <div class="accordion" :class="{open: footer.style == 2}"  @click="footer.style = 2">
               <div class="accordion-title">
                 <p>Custom Footer</p>
-                <div></div>
+                <div class="selector"></div>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
