--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
                         <p v-if="footer.preset.phone" style="margin:0;margin-bottom: 10px;text-align:center;":style="{color: colors.footer.text}">{{footer.preset.phone}}</p>
                         <p v-if="footer.preset.disclaimer.enable" style="margin: 0;margin-bottom:5px;font-size:10px; text-align: center;":style="{color: colors.footer.text}"><br>Copyright &copy; {{(new Date().getFullYear())}}  All rights reserved.<br>
               	         The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife, Manulife & Stylized M Design, Stylized M Design and Manulife Securities are trademarks of The Manufacturers Life Insurance Company and are used by it, and by its affiliates under license. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company.
-                         Details regarding all affiliated companies of MLI can be found on the Manulife Securities website <a href="http://www.manulifesecurities.ca"  target="_blank" :style="{color: colors.links}">www.manulifesecurities.ca</a>.
+                         Details regarding all affiliated companies of MLI can be found on the Manulife Securities website <a href="https://www.manulifesecurities.ca"  target="_blank" :style="{color: colors.links}">www.manulifesecurities.ca</a>.
                          <span v-if="footer.preset.disclaimer.licenses.iiroc">Mutual funds are offered through Manulife Securities Investment Services Inc. </span>
                          <span v-if="footer.preset.disclaimer.licenses.mfda">Stocks, Bonds, and Mutual funds are offered through Manulife Securities Incorporated. </span>
                          <span v-if="footer.preset.disclaimer.insuranceOBA != null">Insurance products and services are offerered through {{footer.preset.disclaimer.insuranceOBA}}. </span>
                          Banking products and services are offered by referral arrangements through are related company Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each of your products and services.
                          <br><br>
-              	         <em><a href="http://co.manulife.ca/securities/ms_corporatedisclaimers" target="_blank" :style="{color: colors.links}">Manulife Securities Disclaimers</a> | <a href="https://www.manulife.ca/corporate/privacy-policy.html" target="_blank" :style="{color: colors.links}">Privacy Policy</a> | <a href="https://www.manulife.com/en/legal.html" target="_blank" :style="{color: colors.links}">Legal</a></em></p>
+              	         <em><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank" :style="{color: colors.links}">Manulife Securities Legal and Disclaimers</a> | <a href="https://www.manulife.ca/privacy-policies.html" target="_blank" :style="{color: colors.links}">Privacy Policy</a></em></p>
                           <p v-if="footer.preset.email" style="margin: 0;font-size:12px; text-align: center;"><a :href="'mailto:' + footer.preset.email + '?subject=Unsubscribe from newsletters'":style="{color: colors.links}">Unsubscribe from newsletters</a></p>
                       </td>
                     </tr>
@@ -815,7 +815,7 @@
             <p><small>Copyright © 2020 All rights reserved.
                       The persons and situations depicted are fictional and their resemblance to anyone living or dead is purely coincidental. This media is for information purposes only and is not intended to provide specific financial, tax, legal, accounting or other advice and should not be relied upon in that regard. Manulife Securities related companies are 100% owned by The Manufactures Life Insurance Company (MLI) which is 100% owned by the Manulife Financial Corporation a publicly traded company. Details regarding all affiliated companies of MLI can be found on the Manulife Securities website www.manulifesecurities.ca. Please confirm with your advisor which company you are dealing with for each of your products and services.
                       <br><br>
-                      Manulife Securities Disclaimers | Privacy Policy | Legal</small></p>
+                      Legal and Disclaimers | Privacy Policy</small></p>
             <div class="form-item">
                 <input type="checkbox" id="useManulifeDisclaimer" v-model="footer.preset.disclaimer.enable">
                 <label for="useManulifeDisclaimer">Use Disclaimer</label>
