--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                          <span v-if="footer.preset.disclaimer.licenses.iiroc">Mutual funds are offered through Manulife Securities Investment Services Inc. </span>
                          <span v-if="footer.preset.disclaimer.licenses.mfda">Stocks, Bonds, and Mutual funds are offered through Manulife Securities Incorporated. </span>
                          <span v-if="footer.preset.disclaimer.insuranceOBA != null">Insurance products and services are offerered through {{footer.preset.disclaimer.insuranceOBA}}. </span>
-                         Banking products and services are offered by referral arrangements through are related company Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each of your products and services.
+                         Banking products and services are offered by referral arrangements through our related company Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each of your products and services.
                          <br><br>
               	         <em><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank" :style="{color: colors.links}">Legal and Disclaimers</a> | <a href="https://www.manulife.ca/privacy-policies.html" target="_blank" :style="{color: colors.links}">Privacy Policy</a></em></p>
                           <p v-if="footer.preset.email" style="margin: 0;font-size:12px; text-align: center;"><a :href="'mailto:' + footer.preset.email + '?subject=Unsubscribe from newsletters'":style="{color: colors.links}">Unsubscribe from newsletters</a></p>
