Fixed spelling mistake in offered

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                          Details regarding all affiliated companies of MLI can be found on the Manulife Securities website <a href="https://www.manulifesecurities.ca"  target="_blank" :style="{color: colors.links}">www.manulifesecurities.ca</a>.
                          <span v-if="footer.preset.disclaimer.licenses.iiroc">Mutual funds are offered through Manulife Securities Investment Services Inc. </span>
                          <span v-if="footer.preset.disclaimer.licenses.mfda">Stocks, Bonds, and Mutual funds are offered through Manulife Securities Incorporated. </span>
-                         <span v-if="footer.preset.disclaimer.insuranceOBA != null">Insurance products and services are offerered through {{footer.preset.disclaimer.insuranceOBA}}. </span>
+                         <span v-if="footer.preset.disclaimer.insuranceOBA != null">Insurance products and services are offered through {{footer.preset.disclaimer.insuranceOBA}}. </span>
                          Banking products and services are offered by referral arrangements through our related company Manulife Bank of Canada. Please confirm with your advisor which company you are dealing with for each of your products and services.
                          <br><br>
               	         <em><a href="https://www.manulifesecurities.ca/corporate-disclaimers.html" target="_blank" :style="{color: colors.links}">Legal and Disclaimers</a> | <a href="https://www.manulife.ca/privacy-policies.html" target="_blank" :style="{color: colors.links}">Privacy Policy</a></em></p>
