Added note about RSS Feed to help section

--- a/index.html
+++ b/index.html
@@ -852,6 +852,8 @@
           <div id="helpCards">
             <div class="card">
               <h3 class="card-title">How to <strong>Setup</strong> the Newsletter</h3>
+              <p><strong><small>If you're using SiteForward's RSS Feed you can load posts from: <a href="http://siteforward.ca/rss-feed">http://siteforward.ca/rss-feed</a></small></strong></p>
+              <ol>
               <ol>
                 <li>Go to the <strong>Setup</strong> tab</li>
                 <li>Add your blog posts <small>(Hover over the <strong><i class="fas fa-question-circle" style="color: #aeaeae;"></i></strong> for tips)</small></li>
